--- a/projects/infra/alb/package.json
+++ b/projects/infra/alb/package.json
@@ -29,7 +29,7 @@
     "@types/node": "^14",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
-    "aws-cdk": "^2.1.0",
+    "aws-cdk": "^2.46.0",
     "esbuild": "^0.15.5",
     "eslint": "^8",
     "eslint-import-resolver-node": "^0.3.6",
@@ -45,8 +45,10 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.1.0",
-    "constructs": "^10.0.5"
+    "@types/randomstring": "^1.1.8",
+    "aws-cdk-lib": "^2.46.0",
+    "constructs": "^10.0.5",
+    "randomstring": "^1.2.2"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
