--- a/projects/infra/alb/package.json
+++ b/projects/infra/alb/package.json
@@ -48,7 +48,8 @@
     "@types/randomstring": "^1.1.8",
     "aws-cdk-lib": "^2.46.0",
     "constructs": "^10.0.5",
-    "randomstring": "^1.2.2"
+    "randomstring": "^1.2.2",
+    "yaml": "^2.1.3"
   },
   "license": "Apache-2.0",
   "version": "0.0.0",
