--- a/projects/devops/cicd/src/lib/buildspec/buildspec-cd.yaml
+++ b/projects/devops/cicd/src/lib/buildspec/buildspec-cd.yaml
@@ -41,8 +41,8 @@ phases:
         fi 
       - |
         if [ "$TARGET_TYPE" = "beanstalk" ]; then 
-          aws elasticbeanstalk create-application-version --application-name $SERVICE_NAME --version-label v$CODEBUILD_BUILD_NUMBER --source-bundle S3Bucket="$ARTIFACT_BUCKET",S3Key="$SERVICE_NAME/$IMAGE_TAG.zip" 
-          aws elasticbeanstalk update-environment --application-name $SERVICE_NAME --environment-name "$DEPLOY_ENV_NAME-$SERVICE_NAME" --version-label=v$CODEBUILD_BUILD_NUMBER
+          aws elasticbeanstalk create-application-version --application-name $SERVICE_NAME-$ENVIRONMENT --version-label v$CODEBUILD_BUILD_NUMBER --source-bundle S3Bucket="$ARTIFACT_BUCKET",S3Key="$SERVICE_NAME/$IMAGE_TAG.zip" 
+          aws elasticbeanstalk update-environment --application-name $SERVICE_NAME-$ENVIRONMENT --environment-name "$DEPLOY_ENV_NAME-$SERVICE_NAME" --version-label=v$CODEBUILD_BUILD_NUMBER
         fi 
       - |
         if [ "$TARGET_TYPE" = "eks" ]; then 
